--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,10 +13,8 @@ environment:
 build: off
 
 install:
-- "set PATH=%PYTHON%\\Scripts;%PYTHON%\\bin;%PATH%"
-- "%PYTHON%\\python.exe -m pip install -r requirements/dev.txt"
-- "%PYTHON%\\python.exe -m pip install -e ."
+  - ps: Install-Product node 8.10
 
 test_script:
-- "%PYTHON%\\python.exe -m pytest --cov aws_lambda_builders --cov-report term-missing tests/unit tests/functional"
-- "%PYTHON%\\python.exe -m pytest tests/integration"
+  - node --version
+  - npm --version
